[package]
name = "simple-grid"
description = "A simple 2d-grid structure"
version = "1.0.4"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["2d", "array", "grid", "map"]
categories = ["data-structures"]
repository = "https://github.com/ijagberg/grid"
homepage = "https://github.com/ijagberg/grid"

[features]
linalg = ["num-traits"]

[dependencies]
serde = { version = "1.0.118", features = ["derive"], optional = true }
num-traits = { version = "0.2.14", optional = true }

[dev-dependencies]
serde_json = "1.0.60"
