[package]
name = "simple-grid"
description = "A simple 2d-grid structure"
version = "2.1.1"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["2d", "array", "grid", "map"]
categories = ["data-structures"]
repository = "https://github.com/ijagberg/grid"
homepage = "https://github.com/ijagberg/grid"

[dependencies]
serde = { version = "1.0.118", features = ["derive"], optional = true }
num-traits = { version = "0.2.16", optional = true }

[dev-dependencies]
simple-grid = { path = ".", features = ["num-traits"] }
rational = { path = "/Users/isak/code/rational", features = ["num-traits"] }
serde_json = "1.0.60"
